...
    "S7F9pcbLWkoaPk9Vo1YeDQ==": {
      "description": "Settings screen title",
      "status": "new",
      "tokens": [],
      "translations": [
        {
          "translation": "Dein Raum.",
          "variations": {}
        }
      ],
      "types": []
    },
    "jG36S+UWgeFOriWURhGcaQ==": {
...
